# dedupefs

./: CHANGES.md  Cargo.toml  Cross.toml  README.md
.github/: env  targets.json
.github/workflows/: release.yml  test.yml
src/: cli.rs  fs.rs  lib.rs  main.rs
src/fs/: normal.rs  reverse.rs
tests/: cli.rs  common.rs  mount_big_files.rs  mount_empty.rs  mount_src.rs
